--- a/app/member/_styles/member.module.css
+++ b/app/member/_styles/member.module.css
@@ -219,4 +219,4 @@ visibility: hidden;
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-/* #endregion ================= FavCard ====================== */
+/* #endregion ================= Register Form ====================== */
