--- a/app/member-center/_styles/member.module.css
+++ b/app/member-center/_styles/member.module.css
@@ -279,112 +279,11 @@
   border-radius: 3px;
   border: transparent;
   color: #fff;
-  background-color: #db6318;
+  background-color: #f87808;
   box-shadow: 1px 1px 3px #5f534bd4;
 }
 /* #endregion ================= FavCard ====================== */
 
-.container {
-  display: flex;
-  justify-content: center;
-  padding: 30px;
-  width: 100%;
-  margin: 66px;
-}
-.left {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 180px 30px;
-  height: 80vh;
-  width: 15%;
-  background-image: linear-gradient(
-    to bottom,
-    #013056,
-    #003560,
-    #003a69,
-    #004073,
-    #00457d,
-    #0e4f8a,
-    #1a5a97,
-    #2465a5,
-    #3779b9,
-    #488dcd,
-    #5aa2e2,
-    #6bb7f6
-  );
-  color: #fff;
-  border-radius: 3px 0px 0px 3px;
-}
-.left div {
-  display: flex;
-  flex-direction: column;
-}
-.left span {
-  font-size: 12px;
-  margin-bottom: 3px;
-}
-.switchBtn {
-  background-color: #db6318;
-  padding: 8px;
-  font-size: 14px;
-  text-align: center;
-  border-radius: 3px;
-}
-.right {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 50%;
-  padding: 30px;
-  padding-left: 60px;
-  border: 1px solid #88a9c8;
-  border-radius: 0px 3px 3px 0px;
-  color: #0b3760;
-}
-.right h1 {
-  margin-bottom: 60px;
-}
-.formGroup {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-}
-.right input {
-  width: 80%;
-  padding: 10px;
-  margin: 0px 0px 0px 15px;
-  border: none;
-  border-bottom: 1px solid #88a9c8;
-}
-
-.iconBtn {
-  border: none;
-  color: #9c9c9c;
-  background-color: transparent;
-}
-
-.loginBtn {
-  padding: 8px 18px;
-  text-align: center;
-  border-radius: 3px;
-  background: #0b3760;
-  color: #fff;
-  font-size: 18px;
-}
-
-.btns {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  padding-right: 30px;
-}
-.btns a {
-  font-size: 12px;
-  margin-right: 4px;
-}
 .icons {
   display: flex;
   /* flex-direction: column; */
