--- a/app/_components/_styles/hero-section.module.css
+++ b/app/_components/_styles/hero-section.module.css
@@ -14,8 +14,8 @@
 
 .heroImage {
     width: 100%;
-    max-width: 1394px;
-    height: 400px;
+    max-width: 1396px;
+    height: 415px;
     position: relative;
     overflow: hidden;
     border-radius: 80px;
@@ -68,7 +68,7 @@
     max-width: 1073px;
     text-align: center;
     font-size: clamp(48px, 6vw, 96px);
-    color: black;
+    color: #333;
     font-weight: 800;
     animation: bounce 1s ease;
     margin-bottom: 20px;
