--- a/app/products/[productId]/_components/_styles/ProductDetail.module.css
+++ b/app/products/[productId]/_components/_styles/ProductDetail.module.css
@@ -205,8 +205,7 @@
 
   .relatedProducts{
     width: 80%;
-    /* display: flex;
-    flex-direction: row; */
+    margin-bottom: 30px;
   }
   
   .relatedProductsGrid {
