--- a/app/member/_styles/member.module.css
+++ b/app/member/_styles/member.module.css
@@ -1,6 +1,5 @@
 /* #region ================= Login Form====================== */
 .loginContainer {
-  background-color: #000000;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,6 +11,7 @@
   color: #fff;
 }
 .loginContainer .form {
+  background-color: #1e1e1e;
   position: relative;
   width: 40%;
   display: flex;
@@ -73,12 +73,15 @@
 .loginBtns {
   width: 90%;
   margin: auto;
+  margin-top: 50px;
   border-radius: 3px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   color: #fff;
-  /* border: 1px solid salmon; */
+}
+.loginBtns a {
+  font-size: 14px;
 }
 .loginContainer .loginBtn {
   width: 100%;
@@ -89,8 +92,9 @@
   font-size: 18px;
   color: #fff;
 }
-.loginBtns a {
-  font-size: 14px;
+.loginContainer hr {
+  margin-top: 20px;
+  border: 0.2px solid #f87808;
 }
 .formGroup div {
   display: flex;
@@ -100,6 +104,16 @@
   margin-top: 4px;
   justify-content: flex-end;
 }
+.googleLoginBtn {
+  width: 100%;
+  background: #f87808;
+  padding: 10px 0px;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  font-size: 18px;
+  color: #fff;
+}
+
 .textDanger {
   /* margin-left: 15px; */
   position: absolute;
@@ -166,7 +180,6 @@
   color: #fff;
   border: 1px solid #ffffff;
   border-radius: 3px;
-  
 }
 .registerContainer .formGroup input::placeholder {
   color: #fff;
@@ -175,8 +188,8 @@
   outline: none;
   border: 1px solid #f87808;
 }
-.visibility{
-visibility: hidden;
+.visibility {
+  visibility: hidden;
 }
 .registerBtns {
   width: 90%;
@@ -216,7 +229,11 @@ visibility: hidden;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 /* #endregion ================= Register Form ====================== */
