--- a/app/member/_styles/member.module.css
+++ b/app/member/_styles/member.module.css
@@ -1,14 +1,36 @@
 /* #region ================= Login Form====================== */
 .loginContainer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
   z-index: -1;
-  padding: 100px;
+  padding: 50px;
   width: 100vw;
   height: 100vh;
   margin: auto;
   color: #fff;
+}
+.home {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80px;
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  padding: 5px;
+  border-radius: 3px;
+}
+.home:hover {
+  background: #f87808;
+}
+.rgBtn {
+  width: 40%;
+  margin: auto;
+  margin-top: 20px;
+  border: 1px solid transparent;
+}
+.rgBtn:hover a {
+  border-bottom: 1px solid #f87808;
 }
 .loginContainer .form {
   background-color: #1e1e1e;
@@ -21,8 +43,8 @@
   border-radius: 3px;
   border: 1px solid salmon;
   backdrop-filter: blur(5px);
-  /* background: rgba(255, 255, 255, 0.636); */
 }
+
 .loginContainer .titleGroup {
   width: 90%;
   display: flex;
@@ -125,12 +147,11 @@
 
 /* #region ================= Register Form====================== */
 .registerContainer {
-  background-color: #000000;
   display: flex;
   flex-direction: column;
   align-items: center;
   z-index: -1;
-  padding: 100px;
+  padding: 50px;
   width: 100vw;
   height: 100vh;
   margin: auto;
@@ -145,6 +166,7 @@
   border-radius: 3px;
   border: 1px solid salmon;
   backdrop-filter: blur(5px);
+  background-color: #1e1e1e;
   /* background: rgba(255, 255, 255, 0.636); */
 }
 .registerContainer .titleGroup {
