--- a/app/articles/styles/articles.module.css
+++ b/app/articles/styles/articles.module.css
@@ -238,7 +238,7 @@
   margin-left: 20px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   gap: 2vw;
 }
 /* card */
