--- a/app/friends/_styles/modal.module.css
+++ b/app/friends/_styles/modal.module.css
@@ -25,7 +25,6 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
-  font-size: 22px;
   position: relative;
 }
 .modalBody {
@@ -35,10 +34,18 @@
   width: 100%;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   margin-left: 20px;
 }
-
+.topRsection {
+  padding: 0 25px;
+}
+.topsection img{
+  border-radius: 3px;
+}
+.topsection p{
+  margin: 10px 0;
+}
 .closeButton {
   background: none;
   border: none;
@@ -49,14 +56,13 @@
   top: 0px;
 }
 .uername {
-  font-size: 26px;
+  font-size: 22px;
   font-weight: bold;
   color: #333;
-  margin: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 }
 .icon {
-  margin-right: 20px;
+  margin-right: 15px;
   animation: rotate 6s infinite linear;
 }
 @keyframes rotate {
@@ -68,22 +74,31 @@
   }
 }
 .userInfo {
-  margin-bottom: 20px;
+  margin: 20px 0;
   padding: 0 20px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  background-color: #f6f6f6;
+  position: relative;
 }
-
+.userInfo::after {
+  content: "";
+  position: absolute;
+  bottom: 83px;
+  left: 20%;
+  transform: translateX(50%) rotateX(180deg);
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #f6f6f6;
+}
 .userInfo p {
   line-height: 2rem;
   margin: 10px;
 }
-.userInfo p span {
-  padding: 5px;
-  margin-right: 5px;
-  border-bottom: 2px solid #dee5e7;
-}
+
 /* button */
 .sendBtn {
   display: flex;
@@ -145,9 +160,12 @@
 .hastag ul {
   display: flex;
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 .hastag ul li {
-  margin: 10px;
+  margin-top: 5px;
+  margin-right: 10px ;
   border-radius: 3px;
   cursor: pointer;
   color: #333;
