--- a/app/locations/_styles/locations.module.css
+++ b/app/locations/_styles/locations.module.css
@@ -151,3 +151,13 @@
   }
 
 }
+
+
+.loaderContainer{
+  width: 80%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 50px;
+}
