--- a/app/_components/_styles/drawer.module.css
+++ b/app/_components/_styles/drawer.module.css
@@ -65,7 +65,7 @@
   }
   
   .navLink {
-    color: #001c1c;
+    color: #333;
     text-decoration: none;
     font-size: 22px;
     font-weight: bold;
