--- a/app/_components/_styles/location-section.module.css
+++ b/app/_components/_styles/location-section.module.css
@@ -5,11 +5,28 @@
     padding: 80px 64px;
     position: relative;
     background-image: url('/location.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     overflow: hidden;
     margin: 50px auto;
     border-radius: 5px;
   }
+  /* 添加暗色遮罩讓文字更清晰 */
+  .container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+  
+  
+
   
   .button {
     width: 100%;
