更新資料庫和商品評價

--- a/app/member-center/rated-reviews/_compenents/_styles/review.module.css
+++ b/app/member-center/rated-reviews/_compenents/_styles/review.module.css
@@ -18,16 +18,17 @@
 
 
 .img{
-    width: 100%;
+    width: 80%;
     height: 100%;
     border-radius: 5px 0 0 5px;
+    object-fit: fill;
+
 }
 
 .imgContainer{
     width: 45%;
-    object-fit: fill;
-    
-
+    height: 200px;
+    overflow: hidden;
 }
 
 .content{
