--- a/app/products/components/_styles/ProductGrid.module.css
+++ b/app/products/components/_styles/ProductGrid.module.css
@@ -25,6 +25,19 @@
   margin-left: 1%;
 }
 
+.noProducts{
+  background-color: #dee5e7;
+  color: #333;
+  width: 97%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  font-size: 20px;
+  margin-left: 30px;
+}
+
 @media (width <= 1440px) {
   .productGrid {
     max-width: 100%;
