--- a/app/videos/components/_styles/Pagination.module.css
+++ b/app/videos/components/_styles/Pagination.module.css
@@ -5,36 +5,36 @@
 }
 
 .active {
-    background-color: #db6318 !important;
+    background-color: #f87808 !important;
     color: white !important;
     font-weight: bold;
 }
 
 .pagination {
-    font-family: "Noto Serif TC", serif;
+   
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px;
     margin-top: 20px;
-    /* border-radius: 8px; */
-    /* gap: 8px; */
+    border-radius: 8px;
+    gap: 5px;
 }
 
 .pageButton {
     color: white;
-    background-color: #013056;
+    background-color: #333;
     padding: 10px 15px;
     border: 1px solid;
     text-decoration: none;
     font-size: 1rem;
     transition: background-color 0.3s, transform 0.2s;
-    /* border-radius: 4px; */
+    border-radius: 4px;
     cursor: pointer;
 }
 
 .pageButton:hover {
-    background-color: #db6318;
+    background-color: #f87808;
     transform: scale(1.1);
 }
 
