--- a/app/videos/components/_styles/video-Card.module.css
+++ b/app/videos/components/_styles/video-Card.module.css
@@ -4,10 +4,16 @@
     align-self: stretch;
     width: 250px;
     max-width: 250px;
-    height: 370px;
+    height: 345px;
     overflow: hidden;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
     border-radius: 3px;
+  }
+
+  .card:hover {
+    transform: scale(1.03);
+    box-shadow: 5px 5px 15px rgba(73, 41, 12, 0.8);
+    z-index: 1;
   }
   
   .cardDark {
@@ -79,12 +85,6 @@
   }
   
   .content {
-    font-family:
-      "Noto Serif TC",
-      -apple-system,
-      Roboto,
-      Helvetica,
-      sans-serif;
       padding: 8px;
   }
   
@@ -93,7 +93,7 @@
     align-items: start;
     gap: 40px 48px;
     width: 100%;
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 600;
     display: flex;
   }
@@ -126,7 +126,7 @@
   .description {
     color: #697278;
     margin-top: 11px;
-    font-size: 12px;
+    font-size: 13px;
   }
   
   .cardLight .description {
@@ -207,7 +207,7 @@
 
   /* modal */
   .video_title{
-    font-size: 24px;
+    font-size: 28px;
     color: rgb(233, 139, 15);
     font-weight: 700;
     text-align: start;
@@ -219,6 +219,7 @@
     margin-top: 20px;
     color: rgb(199, 193, 187);
     padding: 20px;
+    font-size: 20px;
   }
 
   .divder{
