--- a/app/videos/components/_styles/video-Grid.module.css
+++ b/app/videos/components/_styles/video-Grid.module.css
@@ -1,7 +1,7 @@
 .productGrid {
   justify-content: center;
   margin: auto;
-  width: 1440PX;
+  width: 1440px;
   padding: 20px;
   display: flex;
   flex-direction: row;
@@ -22,8 +22,20 @@
   flex-wrap: wrap;
   width: 100%;
   gap: 35px;
-  justify-content: center;
   margin-left: 1%;
+}
+
+.noVideos{
+  background-color: #dee5e7;
+  color: #333;
+  width: 97%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  font-size: 20px;
+  margin-left: 30px;
 }
 
 @media (width <= 1440px) {
