--- a/app/member-center/unrated-reviews/_compenents/_styles/review.module.css
+++ b/app/member-center/unrated-reviews/_compenents/_styles/review.module.css
@@ -17,7 +17,7 @@
 
 
 .img{
-    width: 85%;
+    width: 80%;
     height: 100%;
     border-radius: 5px 0 0 5px;
     object-fit: fill;
@@ -123,6 +123,12 @@
     font-size: 13px;
     font-weight: 700;
     border-radius: 10px;
+}
+
+.loaderContainer{
+    width: 30%;
+    margin: auto;
+    margin-top: 50px;
 }
 
 /* review.module.css */
