--- a/app/member/_styles/member.module.css
+++ b/app/member/_styles/member.module.css
@@ -37,13 +37,13 @@
   padding: 0px 60px;
   z-index: 1; /* 確保內容在遮罩層上方 */
 }
-.loginContainer .right {
+ .right {
   width: 50%;
   display: flex;
   flex-direction: column;
   margin: auto;
 }
-.loginContainer .form {
+ .form {
   background-color: #1e1e1ebe;
   width: 80%;
   display: flex;
@@ -54,15 +54,15 @@
   backdrop-filter: blur(5px);
 }
 
-.loginContainer .titleGroup {
+ .titleGroup {
   width: 50%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 30%;
+  margin-top: 38%;
 }
 
-.loginContainer .formGroup {
+ .formGroup {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -70,30 +70,30 @@
   margin-bottom: 15px;
   font-size: 18px;
 }
-.loginContainer .formGroup .point {
+ .formGroup .point {
   width: 80%;
 }
-.loginContainer .formGroup label {
+ .formGroup label {
   width: 88%;
   display: flex;
   margin: auto;
   margin-bottom: 8px;
 }
-.loginContainer .formGroup input {
+ .formGroup input {
   width: 80%;
   padding: 10px;
   margin: 0px auto;
-  background:#f878081e;
+  background: #f878081e;
   color: #fff;
   border: 1px solid #f8780846;
   border-radius: 3px;
 }
-.loginContainer .formGroup input::placeholder {
+ .formGroup input::placeholder {
   color: #fff;
 }
-.loginContainer .formGroup input:focus {
+.formGroup input:focus {
   outline: none;
-  
+
   box-shadow: inset 1px 2px 8px #f87808;
   transition: all 0.3s ease-in-out;
 }
@@ -122,7 +122,7 @@
   border-bottom: 1px solid #f87808;
   transition: all 0.3s ease-in-out;
 }
-.loginContainer .loginBtn {
+.loginBtn {
   width: 100%;
   background: transparent;
   padding: 5px 0px;
@@ -131,7 +131,7 @@
   font-size: 18px;
   color: #fff;
 }
-.loginContainer .loginBtn:hover {
+.loginBtn:hover {
   box-shadow: inset 1px 2px 8px #f87808;
   transition: all 0.3s ease-in-out;
 }
@@ -183,10 +183,13 @@
   left: 50px;
   top: 15px;
   padding: 5px;
+  border: 1px solid transparent;
+
   border-radius: 3px;
 }
 .home:hover {
-  background: #f87808cf;
+  border: 1px solid #f87808bb;
+  box-shadow: inset 1px 2px 12px #fb9135;
   transition: all 0.3s ease-in-out;
 }
 .rgBtn {
@@ -208,107 +211,45 @@
 
 /* #region ================= Register Form====================== */
 .registerContainer {
+  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  z-index: -1;
-  padding: 50px;
-  width: 100vw;
-  height: 100vh;
+  width: 70vw;
+  height: 80vh;
   margin: auto;
-  color: #fff;
-}
-.registerContainer .form {
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  padding: 50px;
+  background-image: url('/member-bg-2.jpg');
+  background-size: cover;
+  background-position: center;
   border-radius: 3px;
-  border: 1px solid salmon;
-  backdrop-filter: blur(5px);
-  background-color: #1e1e1e;
-  /* background: rgba(255, 255, 255, 0.636); */
-}
-.registerContainer .titleGroup {
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: auto;
-  margin-bottom: 30px;
 }
 
-.registerContainer .formGroup {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+.registerContainer::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  margin-bottom: 30px;
-  font-size: 18px;
+  height: 100%;
+  backdrop-filter: blur(1.2px);
 }
 
-.registerContainer .formGroup label {
-  width: 90%;
-  display: flex;
-  margin: auto;
-  margin-bottom: 4px;
-}
-.registerContainer .formGroup input {
-  width: 90%;
-  padding: 10px;
-  margin: 0px auto;
-  background: rgba(255, 255, 255, 0.4);
-  box-shadow: 4px 4px 60px 8px rgba(0, 0, 0, 0.2);
-  color: #fff;
-  border: 1px solid #ffffff;
-  border-radius: 3px;
-}
-.registerContainer .formGroup input::placeholder {
-  color: #fff;
-}
-.registerContainer .formGroup input:focus {
-  outline: none;
-  border: 1px solid #f87808;
-}
 .visibility {
   visibility: hidden;
 }
-.registerBtns {
-  width: 90%;
-  margin: auto;
-  border-radius: 3px;
+
+.registerContainer .home {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  color: #fff;
-  /* border: 1px solid salmon; */
-}
-.registerContainer .registerBtn {
-  width: 100%;
-  background: #f87808;
-  padding: 10px 0px;
+  align-items: center;
+  justify-content: space-between;
+  width: 80px;
+  position: absolute;
+  left: 20px;
+  top: 15px;
+  padding: 5px;
   border: 1px solid transparent;
   border-radius: 3px;
-  font-size: 18px;
-  color: #fff;
 }
-.registerBtns a {
-  font-size: 14px;
-}
-.formGroup div {
-  display: flex;
-  width: 90%;
-  position: relative;
-  margin: auto;
-  margin-top: 4px;
-  justify-content: flex-end;
-}
-.textDanger {
-  position: absolute;
-  left: 0;
-  color: #f87808;
-  font-size: 12px;
+.registerContainer .titleGroup{
+padding-left: 30px;
 }
 
 /* #endregion ================= Register Form ====================== */
